--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 		</dependency>
-		<!-- === TESTING ===================== -->
+		<!-- === TESTING ================================================== -->
 		<dependency> <!-- JUnit -->
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -69,7 +69,7 @@
 			<version>[2.12.0,]</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- ================================= -->
+		<!-- ============================================================= -->
 		<dependency>
 			<groupId>net.bytebuddy</groupId>
 			<artifactId>byte-buddy-maven-plugin</artifactId>
@@ -86,6 +86,10 @@
 			<artifactId>jsoup</artifactId>
 			<version>[1.10,]</version>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
 		</dependency>
 	</dependencies>
 </project>
