--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,22 @@
 			<artifactId>spring-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- ============================================================= -->
+		<!-- == DATABASE ================================================== -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>[5.2.10, 5.2.99]</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>[5.1, 5.99]</version>
+		</dependency>
+		<!-- ============================================================== -->
 		<dependency>
 			<groupId>net.bytebuddy</groupId>
 			<artifactId>byte-buddy-maven-plugin</artifactId>
@@ -91,15 +106,6 @@
 			<artifactId>jsoup</artifactId>
 			<version>[1.10,]</version>
 			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>[5.1, 5.99]</version>
 		</dependency>
 	</dependencies>
 </project>
