--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
 		</dependency>
 		<!-- == DATABASE ================================================== -->
 		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>[1.11,1.99]</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 		</dependency>
