--- a/pom.xml
+++ b/pom.xml
@@ -131,5 +131,16 @@
 			<version>[1.10,]</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.hateoas</groupId>
+			<artifactId>spring-hateoas</artifactId>
+			<version>[0.23,]</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.plugin</groupId>
+			<artifactId>spring-plugin-core</artifactId>
+			<version>[1.2,]</version>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 </project>
