--- a/pom.xml
+++ b/pom.xml
@@ -74,12 +74,12 @@
 			<artifactId>spring-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.jayway.jsonpath</groupId> -->
-<!-- 			<artifactId>json-path</artifactId> -->
-<!-- 			<version>[2.2,]</version> -->
-<!-- 			<scope>test</scope> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>[2.2,]</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- == DATABASE ================================================== -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
