--- a/pom.xml
+++ b/pom.xml
@@ -147,5 +147,14 @@
 			<artifactId>spring-plugin-core</artifactId>
 			<version>[1.2,]</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>[1,]</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context-support</artifactId>
+		</dependency>
 	</dependencies>
 </project>
